[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "cython-cmake"
version = "0.0.0a0"
description = "CMake functions for compiling Cython extensions"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Vyas Ramasubramani" },
]
license = { text = "Apache 2.0" }
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.0"
dependencies = [
    "cython",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
test = [
]

[project.urls]
Homepage = "https://github.com/vyasr/cython-cmake"
