[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0"]

[project]
name = "cython-cmake"
version = "0.0.0a0"
description = "CMake functions for compiling Cython extensions"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "Vyas Ramasubramani" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.0"
dependencies = [
    "cython",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
test = [
    "pytest",
    "build>=1.0.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.entry-points."cmake.module"]
cython_cmake = "cython_cmake"

[project.urls]
Homepage = "https://github.com/vyasr/cython-cmake"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"*" = ["*.cmake"]
