[build-system]
requires = ["py-build-cmake", "cython", "cython-cmake"]
build-backend = "py_build_cmake.build"

[project]
name = "example"
version = "0.0.1"
description = "Example project"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt"]

[tool.py-build-cmake.cmake]
minimum_version = "3.15"
build_type = "Release"
